logic change / secret removal